--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -483,6 +483,7 @@ jobs:
       #     command: 'cd bit && npm run install-harmony'
 
       - run: npm i -g @teambit/bvm
+      - run: "echo 'export PATH=~/.npm-global/bin:$PATH' >> $BASH_ENV"
       - run: bvm upgrade
       - run: bit
       - run: bbit
