--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -484,8 +484,9 @@ jobs:
 
       - run: npm i -g @teambit/bvm
       - run: "echo 'export PATH=~/.npm-global/bin:$PATH' >> $BASH_ENV"
+      - run: bvm config set DEFAULT_LINK bbit
       - run: bvm upgrade
-      - run: bit
+      # - run: bit
       - run: bbit
       - run: bvm -h
       - run: bbit Install
