--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -467,6 +467,9 @@ jobs:
   setup_harmony:
     resource_class: large
     <<: *defaults
+    environment:
+      # change the npm config to avoid using sudo
+      NPM_CONFIG_PREFIX: ~/.npm-global
     steps:
       - attach_workspace:
           at: ./
@@ -475,19 +478,26 @@ jobs:
       - run:
           name: 'install husky globally'
           command: 'sudo npm i -g husky'
-      - run:
-          name: 'install harmony'
-          command: 'cd bit && npm run install-harmony'
+
+      - run: npm i -g @teambit/bvm
+      - run: "echo 'export PATH=~/.npm-global/bin:$PATH' >> $BASH_ENV"
+      - run: bvm config set DEFAULT_LINK bbit
+      - run: bvm upgrade
+      - run: bbit
+      - run: cd bit && bbit install
+      - run: cd bit && npm run link-bit-legacy
+      - run: cd bit && bbit compile
+
       # - run:
-      #     name: 'import objects'
-      #     command: 'cd bit && npm run import-harmony'
-      - run:
-          name: 'build harmony'
-          command: 'cd bit && npm run build-harmony'
-          no_output_timeout: '20m'
-      - run:
-          name: 'status harmony'
-          command: 'cd bit && npm run status-harmony'
+      #     name: 'install harmony'
+      #     command: 'cd bit && npm run install-harmony'
+      # - run:
+      #     name: 'build harmony'
+      #     command: 'cd bit && npm run build-harmony'
+      #     no_output_timeout: '20m'
+      # - run:
+      #     name: 'status harmony'
+      #     command: 'cd bit && npm run status-harmony'
       - run:
           name: 'Build bit source code'
           command: 'cd bit && npm run build'
