--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,6 +110,10 @@ commands: # reusable commands
       - # add the id_rsa to ssh_agent to make sure we authenticate with the correct user
         run: 'chmod 400 ~/.ssh/id_rsa'
       - run: 'ssh-add ~/.ssh/id_rsa'
+  install_bvm:
+    steps:
+      - run: npm i -g @teambit/bvm
+      - run: "echo 'export PATH=~/.npm-global/bin:$PATH' >> $BASH_ENV"
 
   set_git_credentials:
     steps:
@@ -479,10 +483,10 @@ jobs:
           name: 'install husky globally'
           command: 'sudo npm i -g husky'
 
-      - run: npm i -g @teambit/bvm
-      - run: "echo 'export PATH=~/.npm-global/bin:$PATH' >> $BASH_ENV"
+      - install_bvm
       - run: bvm config set DEFAULT_LINK bbit
       - run: bvm upgrade
+      - run: bvm link --verbose
       - run: bbit
       - run: cd bit && bbit install
       - run: cd bit && npm run link-bit-legacy
@@ -509,6 +513,10 @@ jobs:
           paths:
             - bit
             - .pnpm-store
+      - persist_to_workspace:
+          root: /home/circleci
+          paths:
+            - .bvm
       - store_artifacts:
           path: ~/Library/Caches/Bit/logs
       - store_artifacts:
@@ -553,6 +561,7 @@ jobs:
       - attach_workspace:
           at: ./
       - bit_global_for_npm
+      - install_bvm
       - bit_config:
           env: "hub"
       - restore_cache:
@@ -565,6 +574,7 @@ jobs:
           name: setting npmjs registry with publishing permission
           command: echo "//registry.npmjs.org/:_authToken=${npmjsRegistryToken}" >> ~/.npmrc
       - run: cd bit && node scripts/bump-bit-legacy-ver.js
+      - run: bvm link
       # - run: cd bit && build-harmony/node_modules/.bin/bbit status
       - run: cd bit && bbit status
       # temporarily. otherwise it fails on bit-checkout during Yarn installation with "Error: ENOENT: no such file or directory, chmod '/home/******ci/bit/bit/node_modules/@teambit/legacy/node_modules/@babel/core/node_modules/semver/bin/semver'""
