--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -510,6 +510,9 @@
     "scopes/harmony": {
       "defaultScope": "teambit.harmony"
     },
+    "scopes/html": {
+      "defaultScope": "teambit.html"
+    },
     "scopes/compilation": {
       "defaultScope": "teambit.compilation"
     },
