--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -64,7 +64,7 @@
         "@teambit/base-ui.routing.native-nav-link": "0.0.2",
         "@teambit/base-ui.routing.nav-link": "0.1.0",
         "@teambit/base-ui.routing.routing-provider": "0.0.2",
-        "@teambit/base-ui.styles.flex-center": "0.0.1",
+        "@teambit/base-ui.styles.flex-center": "0.0.2",
         "@teambit/base-ui.surfaces.card": "0.7.0",
         "@teambit/base-ui.surfaces.split-pane.hover-splitter": "0.7.4",
         "@teambit/base-ui.surfaces.split-pane.split-pane": "0.6.11",
@@ -80,7 +80,7 @@
         "@teambit/base-ui.theme.fonts.roboto": "0.6.10",
         "@teambit/base-ui.theme.sizes": "0.6.10",
         "@teambit/base-ui.theme.theme-provider": "0.6.13",
-        "@teambit/base-ui.utils.composer": "0.0.4",
+        "@teambit/base-ui.utils.composer": "0.0.5",
         "@teambit/base-ui.utils.popper-js.ignore-popper-size": "0.6.11",
         "@teambit/base-ui.utils.popper-js.resize-to-match-reference": "0.6.11",
         "@teambit/base-ui.utils.string.affix": "0.6.10",
@@ -265,9 +265,9 @@
         "process": "0.11.10",
         "query-string": "7.0.0",
         "react-animate-height": "2.0.23",
-        "react-dev-utils": "^10.2.1",
+        "react-dev-utils": "10.2.1",
         "react-error-boundary": "3.1.0",
-        "react-error-overlay": "^6.0.9",
+        "react-error-overlay": "6.0.9",
         "react-flow-renderer": "8.3.7",
         "react-popper": "2.2.4",
         "react-router-dom": "5.2.0",
