--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -266,7 +266,7 @@
         "query-string": "7.0.0",
         "react-animate-height": "2.0.23",
         "react-dev-utils": "10.2.1",
-        "react-error-boundary": "3.1.0",
+        "react-error-boundary": "^3.0.0",
         "react-error-overlay": "6.0.9",
         "react-flow-renderer": "8.3.7",
         "react-popper": "2.2.4",
