--- a/package.json
+++ b/package.json
@@ -153,6 +153,7 @@
     "firstline": "2.0.2",
     "fs-extra": "9.1.0",
     "glob": "7.1.6",
+    "globby": "11.0.1",
     "graphlib": "2.1.8",
     "graphql-request": "3.4.0",
     "graphviz": "0.0.9",
