--- a/scripts/docker-teambit-bit/Dockerfile-bit-server
+++ b/scripts/docker-teambit-bit/Dockerfile-bit-server
@@ -2,4 +2,5 @@ ARG BIT_VERSION=latest
 FROM bitcli/bit:${BIT_VERSION}
 ARG SCOPE_PATH=/tmp/scope-fs
 WORKDIR ${SCOPE_PATH}
+RUN bit init --bare
 CMD bit start
