setting NODE_OPTIONS to increase node memory to 4GB

--- a/scripts/docker-teambit-bit/Dockerfile-bit
+++ b/scripts/docker-teambit-bit/Dockerfile-bit
@@ -7,6 +7,9 @@ RUN npm i @teambit/bvm -g
 RUN bvm upgrade
 ENV PATH=$PATH:/home/user/bin
 
+# increase node process memory
+ENV NODE_OPTIONS=--max_old_space_size=4096
+
 RUN bit config set analytics_reporting false
 RUN bit config set no_warnings false
 RUN bit config set interactive false
