error boundary for compositions and docs (#4400)
- create error boundary component
- add error boundary to composition preview in docs
- add error boundary to compositions
- error boundary for docs
- use the robust base-ui `Composer` component for providers/decorators

--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -64,6 +64,7 @@
         "@teambit/base-ui.routing.native-nav-link": "0.0.2",
         "@teambit/base-ui.routing.nav-link": "0.1.0",
         "@teambit/base-ui.routing.routing-provider": "0.0.2",
+        "@teambit/base-ui.styles.flex-center": "0.0.2",
         "@teambit/base-ui.surfaces.card": "0.7.0",
         "@teambit/base-ui.surfaces.split-pane.hover-splitter": "0.7.4",
         "@teambit/base-ui.surfaces.split-pane.split-pane": "0.6.11",
@@ -79,6 +80,7 @@
         "@teambit/base-ui.theme.fonts.roboto": "0.6.10",
         "@teambit/base-ui.theme.sizes": "0.6.10",
         "@teambit/base-ui.theme.theme-provider": "0.6.13",
+        "@teambit/base-ui.utils.composer": "0.0.5",
         "@teambit/base-ui.utils.popper-js.ignore-popper-size": "0.6.11",
         "@teambit/base-ui.utils.popper-js.resize-to-match-reference": "0.6.11",
         "@teambit/base-ui.utils.string.affix": "0.6.10",
@@ -86,6 +88,7 @@
         "@teambit/base-ui.utils.time-ago": "0.6.10",
         "@teambit/capsule": "0.0.12",
         "@teambit/component.instructions.exporting-components": "0.0.5",
+        "@teambit/design.ui.icon-button": "0.0.17",
         "@teambit/documenter.code.react-playground": "3.0.11",
         "@teambit/documenter.routing.external-link": "3.0.12",
         "@teambit/documenter.theme.theme-compositions": "3.0.14",
@@ -262,6 +265,7 @@
         "query-string": "7.0.0",
         "react-animate-height": "2.0.23",
         "react-dev-utils": "10.2.1",
+        "react-error-boundary": "^3.0.0",
         "react-error-overlay": "6.0.9",
         "react-flow-renderer": "8.3.7",
         "react-popper": "2.2.4",
