--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1640,8 +1640,15 @@ workflows:
           requires:
             - bit_tag
             - harmony_deploy_approval_job
-      - docker_build:
-          <<: *master_only_filter
+      - symphony_docker_build:
           requires:
             - harmony_deploy_approval_job
             - bit_tag
+      - docker_build:
+          requires:
+            - harmony_deploy_approval_job
+            - harmony_publish_to_gcloud
+      - server_docker_build:
+          requires:
+            - harmony_deploy_approval_job
+            - docker_build
