--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1586,8 +1586,7 @@ workflows:
 
   server_docker_build:
     jobs:
-      - server_docker_build:
-          type: approval
+      - server_docker_build
   # TODO: check if we can combine it with the regular nightly somehow
   harmony_deploy:
     jobs:
