--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1586,7 +1586,10 @@ workflows:
 
   server_docker_build:
     jobs:
-      - server_docker_build
+      - checkout_code
+      - server_docker_build:
+          requires:
+            - checkout_code
   # TODO: check if we can combine it with the regular nightly somehow
   harmony_deploy:
     jobs:
