change to root user

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1587,9 +1587,13 @@ workflows:
   server_docker_build:
     jobs:
       - checkout_code
-      - server_docker_build:
+      - docker_build:
           requires:
             - checkout_code
+      - server_docker_build:
+          requires:
+            - harmony_deploy_approval_job
+            - docker_build
   # TODO: check if we can combine it with the regular nightly somehow
   harmony_deploy:
     jobs:
