--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -8,6 +8,8 @@
   },
   "teambit.dependencies/dependency-resolver": {
     "packageManager": "teambit.dependencies/yarn",
+    // Setting this to false, to make sure we are not consuming anything that exists only on the bit.dev registry
+    "installFromBitDevRegistry": false,
     "policy": {
       "dependencies": {
         "@babel/core": "7.11.6",
