--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -210,14 +210,14 @@ jobs:
       # prod registry
       - run: npm config set @bit:registry https://node.bit.dev
       - run: echo "//node.bit.dev/:_authToken=$registryProdToken" >> ~/.npmrc
-      - run: echo "always-auth=true" >> ~/.npmrc
+      # - run: echo "always-auth=true" >> ~/.npmrc
       # stage registry
       # -
       # run: 'npm config set @bit:registry https://node-stg.bit.dev'
       # -
       # run: 'echo "//node-stg.bit.dev/:_authToken=$registryStgToken" >> ~/.npmrc'
       - save_cache:
-          key: bitsrc-registry8
+          key: bitsrc-registry9
           # key: bitsrc-registry-stg-v2
           paths:
             - ~/.npmrc
@@ -500,7 +500,7 @@ jobs:
       - attach_workspace:
           at: ./
       - restore_cache:
-          key: bitsrc-registry8
+          key: bitsrc-registry9
       - run:
           name: 'install husky globally'
           command: 'sudo npm i -g husky'
@@ -561,7 +561,7 @@ jobs:
       - restore_cache:
           key: bitsrc-ssh-key3
       - restore_cache:
-          key: bitsrc-registry8
+          key: bitsrc-registry9
       # - update_ssh_agent
       - run:
           name: 'bit status'
@@ -595,7 +595,7 @@ jobs:
       - restore_cache:
           key: bitsrc-ssh-key3
       - restore_cache:
-          key: bitsrc-registry8
+          key: bitsrc-registry9
       - update_ssh_agent
       - set_git_credentials
       - run:
@@ -841,7 +841,7 @@ jobs:
       - restore_cache:
           key: bitsrc-ssh-key3
       - restore_cache:
-          key: bitsrc-registry8
+          key: bitsrc-registry9
       - update_ssh_agent
       - set_git_credentials
       - run: bit config set user.token ${BIT_DEV_PROD_TOKEN}
@@ -891,7 +891,7 @@ jobs:
       - restore_cache:
           key: bitsrc-ssh-key3
       - restore_cache:
-          key: bitsrc-registry8
+          key: bitsrc-registry9
       # add the id_rsa to ssh_agent to make sure we authenticate with the correct user
       # - run: 'chmod 400 ~/.ssh/id_rsa'
       # - run: 'ssh-add ~/.ssh/id_rsa'
@@ -966,7 +966,7 @@ jobs:
       - restore_cache:
           key: bitsrc-ssh-key3
       - restore_cache:
-          key: bitsrc-registry8
+          key: bitsrc-registry9
           # key: bitsrc-registry-stg-v2
       - # add the id_rsa to ssh_agent to make sure we authenticate with the correct user
         run: 'chmod 400 ~/.ssh/id_rsa'
