Use the new JSX transform in React environment.

--- a/scopes/react/react/typescript/tsconfig.build.json
+++ b/scopes/react/react/typescript/tsconfig.build.json
@@ -5,7 +5,7 @@
     ],
     "target": "es2015",
     "module": "commonjs",
-    "jsx": "react",
+    "jsx": "react-jsx",
     "allowJs": true,
     "composite": true,
     "declaration": true,
