--- a/scopes/react/react/typescript/tsconfig.json
+++ b/scopes/react/react/typescript/tsconfig.json
@@ -5,7 +5,7 @@
     ],
     "target": "es2015",
     "module": "commonjs",
-    "jsx": "react",
+    "jsx": "react-jsx",
     "declaration": true,
     "sourceMap": true,
     "skipLibCheck": true,
