add ^ to the yarnpkg packages

--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -170,11 +170,11 @@
         "@types/webpack": "4.41.25",
         "@types/webpack-dev-server": "3.11.1",
         "@types/webpack-merge": "4.1.5",
-        "@yarnpkg/cli": "3.0.0-rc.6",
-        "@yarnpkg/core": "3.0.0-rc.6",
-        "@yarnpkg/fslib": "2.5.0-rc.6",
-        "@yarnpkg/plugin-npm": "2.5.0-rc.6",
-        "@yarnpkg/plugin-pack": "3.0.0-rc.6",
+        "@yarnpkg/cli": "^3.0.0-rc.6",
+        "@yarnpkg/core": "^3.0.0-rc.6",
+        "@yarnpkg/fslib": "^2.5.0-rc.6",
+        "@yarnpkg/plugin-npm": "^2.5.0-rc.6",
+        "@yarnpkg/plugin-pack": "^3.0.0-rc.6",
         "agentkeepalive": "4.1.4",
         "ansi-to-html": "0.6.14",
         "apollo-link-context": "1.0.20",
