--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -510,7 +510,8 @@ jobs:
       - restore_cache:
           key: v2-linux-bvm-folder-{{ checksum "version.txt" }}
       - run: bvm config set DEFAULT_LINK bbit
-      - run: bvm upgrade
+      - run: bvm install 0.0.428
+      # - run: bvm upgrade
       - run: bvm link --verbose
       - run: bbit
       - save_cache:
