--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -165,7 +165,7 @@
         "@types/ua-parser-js": "0.7.35",
         "@types/url-join": "4.0.0",
         "@types/url-parse": "1.4.3",
-        "@types/webpack": "4.41.25",
+        "@types/webpack": "5.28.0",
         "@types/webpack-dev-server": "3.11.1",
         "@types/webpack-merge": "4.1.5",
         "@yarnpkg/cli": "^3.0.0-rc.6",
@@ -291,6 +291,7 @@
         "terser-webpack-plugin": "5.1.1",
         "tippy.js": "6.2.7",
         "typedoc": "0.18.0",
+        "typescript": "^4.2.3",
         "typescript-language-server": "0.4.0",
         "ua-parser-js": "0.7.24",
         "unist-util-remove": "2.0.1",
@@ -304,7 +305,7 @@
         "vscode-languageclient": "6.1.3",
         "vscode-languageserver": "6.1.1",
         "vscode-ws-jsonrpc": "0.2.0",
-        "webpack": "5.35.0",
+        "webpack": "5.36.2",
         "webpack-dev-middleware": "4.1.0",
         "webpack-dev-server": "4.0.0-beta.2",
         "webpack-hot-middleware": "2.25.0",
@@ -318,7 +319,7 @@
         "@apollo/client": "^3.0.0",
         "@teambit/legacy": "1.0.109",
         "browserslist": "4.16.3",
-        "core-js": "3.10.0",
+        "core-js": "^3.10.0",
         "graphql": "14.7.0",
         "mz": "2.7.0",
         "react": "17.0.2",
@@ -504,9 +505,6 @@
     "scopes/react": {
       "defaultScope": "teambit.react"
     },
-    "scopes/angular": {
-      "defaultScope": "teambit.angular"
-    },
     "scopes/preview": {
       "defaultScope": "teambit.preview"
     },
@@ -614,7 +612,7 @@
             "react-native-web": "0.14.13",
             "react": "16.14.0",
             "react-dom": "16.14.0",
-            "core-js": "3.10.0",
+            "core-js": "3.13.0",
             // Those are here to make sure we have them in the root with specific versions when installing with bvm
             "postcss": "8.2.9",
             "buffer": "6.0.3",
