--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -240,6 +240,7 @@
         "lodash.compact": "3.0.1",
         "lodash.head": "4.0.1",
         "lodash.pick": "4.4.0",
+        "map-obj": "4.2.1",
         "memoize-one": "5.1.1",
         "memoizee": "0.4.15",
         "memory-fs": "0.5.0",
@@ -511,6 +512,9 @@
     },
     "scopes/harmony": {
       "defaultScope": "teambit.harmony"
+    },
+    "scopes/html": {
+      "defaultScope": "teambit.html"
     },
     "scopes/compilation": {
       "defaultScope": "teambit.compilation"
