--- a/package.json
+++ b/package.json
@@ -228,7 +228,7 @@
     "table": "5.4.6",
     "tar-stream": "2.2.0",
     "tsyringe": "4.4.0",
-    "tty-table": "2.8.13",
+    "cli-table": "0.3.6",
     "uid-number": "0.0.6",
     "unionfs": "3.0.2",
     "uniqid": "5.3.0",
@@ -256,6 +256,7 @@
     "@babel/register": "7.12.13",
     "@types/bluebird": "3.5.33",
     "@types/cacache": "12.0.1",
+    "@types/cli-table": "^0.3.0",
     "@types/chai": "4.2.15",
     "@types/chai-arrays": "1.0.3",
     "@types/chai-fs": "2.0.2",
