inline css-resets in react docs and compositions (#4506)
* composition in overview improvements

* use new documenter mdx component (pending tag)

* remove components moved to documenter

* move pre definition to documenter mdx

* reuse live code snippet from documenter

* update documenter components, and theme-provider

* remove temp fix

* add new components hybrid-live-code-snippet and mdx

* fix types

* fix code scroll in react-playground

--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -78,7 +78,7 @@
         "@teambit/base-ui.theme.dark-theme": "1.0.2",
         "@teambit/base-ui.theme.fonts.roboto": "1.0.0",
         "@teambit/base-ui.theme.sizes": "1.0.0",
-        "@teambit/base-ui.theme.theme-provider": "0.6.14",
+        "@teambit/base-ui.theme.theme-provider": "1.0.1",
         "@teambit/base-ui.utils.composer": "1.0.0",
         "@teambit/base-ui.utils.popper-js.ignore-popper-size": "1.0.0",
         "@teambit/base-ui.utils.popper-js.resize-to-match-reference": "1.0.0",
@@ -89,33 +89,35 @@
         "@teambit/component.instructions.exporting-components": "0.0.5",
         "@teambit/design.ui.icon-button": "1.0.1",
         "@teambit/documenter.code.react-playground": "4.0.1",
-        "@teambit/documenter.routing.external-link": "4.0.0",
-        "@teambit/documenter.theme.theme-compositions": "4.0.1",
-        "@teambit/documenter.theme.theme-context": "3.0.14",
-        "@teambit/documenter.types.docs-file": "4.0.1",
-        "@teambit/documenter.ui.block-quote": "4.0.1",
-        "@teambit/documenter.ui.bold": "4.0.1",
-        "@teambit/documenter.ui.code-snippet": "4.0.1",
-        "@teambit/documenter.ui.consumable-link": "4.0.1",
-        "@teambit/documenter.ui.heading": "4.0.1",
-        "@teambit/documenter.ui.highlighted-text": "4.0.1",
+        "@teambit/documenter.markdown.hybrid-live-code-snippet": "0.1.3",
+        "@teambit/documenter.markdown.mdx": "0.1.3",
+        "@teambit/documenter.routing.external-link": "4.1.0",
+        "@teambit/documenter.theme.theme-compositions": "4.1.1",
+        "@teambit/documenter.theme.theme-context": "4.0.3",
+        "@teambit/documenter.types.docs-file": "4.0.3",
+        "@teambit/documenter.ui.block-quote": "4.0.3",
+        "@teambit/documenter.ui.bold": "4.0.3",
+        "@teambit/documenter.ui.code-snippet": "4.1.1",
+        "@teambit/documenter.ui.consumable-link": "4.0.3",
+        "@teambit/documenter.ui.heading": "4.1.1",
+        "@teambit/documenter.ui.highlighted-text": "4.1.1",
         "@teambit/documenter.ui.image": "4.0.0",
-        "@teambit/documenter.ui.import-action": "4.0.1",
-        "@teambit/documenter.ui.italic": "4.0.1",
-        "@teambit/documenter.ui.label": "4.0.1",
-        "@teambit/documenter.ui.label-list": "4.0.1",
-        "@teambit/documenter.ui.linked-heading": "4.0.1",
-        "@teambit/documenter.ui.ol": "4.0.1",
-        "@teambit/documenter.ui.paragraph": "4.0.1",
-        "@teambit/documenter.ui.property-table": "4.0.1",
-        "@teambit/documenter.ui.section": "4.0.1",
-        "@teambit/documenter.ui.separator": "4.0.1",
-        "@teambit/documenter.ui.sub-title": "4.0.1",
-        "@teambit/documenter.ui.sup": "4.0.1",
-        "@teambit/documenter.ui.table.base-table": "4.0.1",
-        "@teambit/documenter.ui.table.td": "4.0.1",
-        "@teambit/documenter.ui.table.tr": "4.0.1",
-        "@teambit/documenter.ui.ul": "4.0.1",
+        "@teambit/documenter.ui.import-action": "4.1.1",
+        "@teambit/documenter.ui.italic": "4.0.3",
+        "@teambit/documenter.ui.label": "4.0.3",
+        "@teambit/documenter.ui.label-list": "4.0.3",
+        "@teambit/documenter.ui.linked-heading": "4.1.1",
+        "@teambit/documenter.ui.ol": "4.1.1",
+        "@teambit/documenter.ui.paragraph": "4.1.1",
+        "@teambit/documenter.ui.property-table": "4.1.2",
+        "@teambit/documenter.ui.section": "4.1.1",
+        "@teambit/documenter.ui.separator": "4.1.1",
+        "@teambit/documenter.ui.sub-title": "4.1.1",
+        "@teambit/documenter.ui.sup": "4.0.3",
+        "@teambit/documenter.ui.table.base-table": "4.1.1",
+        "@teambit/documenter.ui.table.td": "4.1.1",
+        "@teambit/documenter.ui.table.tr": "4.1.1",
+        "@teambit/documenter.ui.ul": "4.1.1",
         "@teambit/evangelist.elements.button": "1.0.3",
         "@teambit/evangelist.elements.heading": "1.0.2",
         "@teambit/evangelist.elements.icon": "1.0.2",
