--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -251,6 +251,7 @@
         "mousetrap": "1.6.5",
         "nanoid": "3.1.20",
         "nerf-dart": "1.0.0",
+        "new-url-loader": "0.1.1",
         "parallel-webpack": "2.6.0",
         "parse-es6-imports": "1.0.1",
         "parse-package-name": "0.1.0",
