--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -307,7 +307,7 @@
         "vscode-ws-jsonrpc": "0.2.0",
         "webpack": "5.36.2",
         "webpack-dev-middleware": "4.1.0",
-        "webpack-dev-server": "4.0.0-beta.2",
+        "webpack-dev-server": "4.0.0-rc.0",
         "webpack-hot-middleware": "2.25.0",
         "webpack-manifest-plugin": "3.1.1",
         "webpack-merge": "5.7.3",
@@ -606,7 +606,6 @@
             "browserslist": "4.16.3",
             "reflect-metadata": "0.1.13",
             "mz": "2.7.0",
-            "react-refresh": "0.9.0",
             // TODO: remove this once this is merged https://github.com/isaacs/node-graceful-fs/pull/202
             "graceful-fs": "4.2.4",
             // make sure the package manager installs an instance of react (and other peers)
