update yarn packages

--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -173,9 +173,9 @@
         "@types/webpack": "5.28.0",
         "@types/webpack-dev-server": "3.11.1",
         "@types/webpack-merge": "4.1.5",
-        "@yarnpkg/cli": "^3.0.1-rc.1",
-        "@yarnpkg/core": "3.0.0",
-        "@yarnpkg/fslib": "2.5.0",
+        "@yarnpkg/cli": "3.0.1",
+        "@yarnpkg/core": "^3.1.0-rc.1",
+        "@yarnpkg/fslib": "2.5.1",
         "@yarnpkg/plugin-npm": "2.5.0",
         "@yarnpkg/plugin-pack": "3.0.0",
         "agentkeepalive": "4.1.4",
