--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -173,7 +173,6 @@
         "@types/url-parse": "1.4.3",
         "@types/webpack": "5.28.0",
         "@types/webpack-dev-server": "4.0.3",
-        "@types/webpack-merge": "4.1.5",
         "@yarnpkg/cli": "3.0.1",
         "@yarnpkg/core": "^3.1.0-rc.1",
         "@yarnpkg/fslib": "2.5.1",
@@ -251,6 +250,7 @@
         "memory-fs": "0.5.0",
         "mime": "2.5.2",
         "mini-css-extract-plugin": "2.2.1",
+        "@types/mini-css-extract-plugin": "2.2.0",
         "minimatch": "3.0.4",
         "mousetrap": "1.6.5",
         "nanoid": "3.1.20",
