restructure style loaders

--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -157,12 +157,14 @@
         "@types/mdx-js__react": "1.5.3",
         "@types/memoizee": "0.4.5",
         "@types/mime": "2.0.3",
+        "@types/mini-css-extract-plugin": "2.2.0",
         "@types/mousetrap": "1.6.5",
         "@types/node": "14.14.13",
         "@types/pluralize": "0.0.29",
         "@types/postcss-normalize": "9.0.1",
         "@types/puppeteer": "3.0.5",
         "@types/react": "17.0.8",
+        "@types/react-dev-utils": "9.0.8",
         "@types/react-dom": "17.0.5",
         "@types/react-router-dom": "5.1.7",
         "@types/react-tabs": "2.3.2",
@@ -250,7 +252,6 @@
         "memory-fs": "0.5.0",
         "mime": "2.5.2",
         "mini-css-extract-plugin": "2.2.2",
-        "@types/mini-css-extract-plugin": "2.2.0",
         "minimatch": "3.0.4",
         "mousetrap": "1.6.5",
         "nanoid": "3.1.20",
