--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -157,6 +157,7 @@
         "@types/mdx-js__react": "1.5.3",
         "@types/memoizee": "0.4.5",
         "@types/mime": "2.0.3",
+        "@types/mini-css-extract-plugin": "2.2.0",
         "@types/mousetrap": "1.6.5",
         "@types/node": "14.14.13",
         "@types/pluralize": "0.0.29",
@@ -238,6 +239,7 @@
         "join-path": "1.1.1",
         "json-formatter-js": "2.3.4",
         "jsx-to-string": "1.4.0",
+        "junit-report-builder": "3.0.0",
         "loader-utils": "2.0.0",
         "lodash": "4.17.20",
         "lodash.compact": "3.0.1",
@@ -249,7 +251,6 @@
         "memory-fs": "0.5.0",
         "mime": "2.5.2",
         "mini-css-extract-plugin": "2.2.2",
-        "@types/mini-css-extract-plugin": "2.2.0",
         "minimatch": "3.0.4",
         "mousetrap": "1.6.5",
         "nanoid": "3.1.20",
