--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -15,6 +15,7 @@
         "@babel/preset-typescript": "7.12.7",
         "@babel/types": "^7.13.12",
         "@graphql-modules/core": "0.7.17",
+        "less": "^4.1.1",
         "@jest/test-result": "26.6.2",
         "@mdx-js/loader": "1.6.21",
         "@mdx-js/mdx": "1.6.21",
